Logo alignment fix

--- a/css/styles1.css
+++ b/css/styles1.css
@@ -27,6 +27,7 @@ input[type=text] {
     -moz-box-shadow: 0 0 16px rgba(0, 0, 0, 0.3);
     -webkit-box-shadow: 0 0 16px rgba(0, 0, 0, 0.3);
     background-position: 100% 0px;
+    background-size: 441px 291px;
 }
 
 .header__link--button {
